--- a/style.css
+++ b/style.css
@@ -1,44 +1,47 @@
 body {
-  margin: 0%;
-  height: 100vh;
-  overflow: hidden;
-  justify-content: center;
+  margin: 0;
   display: flex;
+  justify-content: center;
+  height: 100vh;
   align-items: center;
   background-color: brown;
 }
 
 .slider-container {
   position: relative;
-  width: 600;
-  height: 400;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+  width: 600px;
   overflow: hidden;
+  height: 400px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(49, 47, 47, 0.4);
 }
 
 .image-container {
   display: flex;
-  transition: 30ms ease-out;
+  transition: transform 30ms ease-in-out;
 }
+
 
 .btn {
   position: absolute;
-  color: azure;
   top: 50%;
   transform: translateY(-50%);
+  color: azure;
+  opacity: 1;
   cursor: pointer;
-  opacity: 0.5;
 }
+
 
 .btn.prev {
   left: 10px;
 }
 
+
 .btn.next {
   right: 10px;
 }
 
+
 .btn:hover {
-  opacity: 1;
+  opacity: 0.5;
 }
